--- a/doc/examples/Parameter Heatmap & Optimization.ipynb
+++ b/doc/examples/Parameter Heatmap & Optimization.ipynb
@@ -21,9 +21,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "source": [
-    "from backtesting.test import SMA"
-   ],
+   "source": "from lucit_backtesting.test import SMA",
    "outputs": []
   },
   {
@@ -43,8 +41,8 @@
    "execution_count": 2,
    "metadata": {},
    "source": [
-    "from backtesting import Strategy\n",
-    "from backtesting.lib import crossover\n",
+    "from lucit_backtesting import Strategy\n",
+    "from lucit_backtesting.lib import crossover\n",
     "\n",
     "\n",
     "class Sma4Cross(Strategy):\n",
@@ -112,8 +110,8 @@
    "source": [
     "%%time \n",
     "\n",
-    "from backtesting import Backtest\n",
-    "from backtesting.test import GOOG\n",
+    "from lucit_backtesting import Backtest\n",
+    "from lucit_backtesting.test import GOOG\n",
     "\n",
     "\n",
     "backtest = Backtest(GOOG, Sma4Cross, commission=.002)\n",
@@ -226,7 +224,7 @@
    "execution_count": 8,
    "metadata": {},
    "source": [
-    "from backtesting.lib import plot_heatmaps\n",
+    "from lucit_backtesting.lib import plot_heatmaps\n",
     "\n",
     "\n",
     "plot_heatmaps(heatmap, agg='mean')"
